[gd_scene load_steps=14 format=1]

[ext_resource path="res://Scripts/RoomScript.gd" type="Script" id=1]
[ext_resource path="res://Object_Scenes/BackgroundKino.tscn" type="PackedScene" id=2]
[ext_resource path="res://Object_Scenes/WallsCollision.tscn" type="PackedScene" id=3]
[ext_resource path="res://Object_Scenes/EndArea.tscn" type="PackedScene" id=4]
[ext_resource path="res://Object_Scenes/UnlockExitArea.tscn" type="PackedScene" id=5]
[ext_resource path="res://Object_Scenes/StartArea.tscn" type="PackedScene" id=6]
[ext_resource path="res://Object_Scenes/PlayerSpace.tscn" type="PackedScene" id=7]
[ext_resource path="res://Object_Scenes/OutlineSpriteKino.tscn" type="PackedScene" id=8]
[ext_resource path="res://Object_Scenes/RoomEndArea.tscn" type="PackedScene" id=9]
[ext_resource path="res://Object_Scenes/FrontSprites.tscn" type="PackedScene" id=10]
[ext_resource path="res://Object_Scenes/KinoSamplePlayer.tscn" type="PackedScene" id=11]
[ext_resource path="res://Object_Scenes/KinoSounds.tscn" type="PackedScene" id=12]
[ext_resource path="res://Object_Scenes/Video.tscn" type="PackedScene" id=13]

[node name="Room_023" type="Node2D"]

script/script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}
PreviousRoom = "res://Scenes/Level_023.tscn"
has_player_spawn = true
play_fade_in = true

[node name="BackgroundKino" parent="." instance=ExtResource( 2 )]

[node name="WallsCollision" parent="." instance=ExtResource( 3 )]

[node name="Platforme" type="Node2D" parent="."]

[node name="EndArea" parent="." instance=ExtResource( 4 )]

visibility/visible = false
transform/pos = Vector2( 960, 50 )

[node name="UnlockExitArea" parent="." instance=ExtResource( 5 )]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( 330, -595.321 )

[node name="StartArea" parent="." instance=ExtResource( 6 )]

visibility/visible = false
transform/pos = Vector2( 360, -139.321 )

[node name="PlayerSpace" parent="." instance=ExtResource( 7 )]

[node name="OutlineSpriteKino" parent="." instance=ExtResource( 8 )]

[node name="RoomEndArea" parent="." instance=ExtResource( 9 )]

visibility/visible = false
transform/pos = Vector2( 270, -139.321 )
transform/rot = 180.0

[node name="FrontSprites" parent="." instance=ExtResource( 10 )]

[node name="KinoSamplePlayer" parent="." instance=ExtResource( 11 )]

[node name="KinoSounds" parent="." instance=ExtResource( 12 )]

[node name="Video" parent="." instance=ExtResource( 13 )]

transform/pos = Vector2( 960, 541 )
transform/scale = Vector2( 1.003, 1.003 )
videoName = "006"
videoOpacity = 0.8

[connection signal="body_enter" from="EndArea" to="." method="_on_EndArea_body_enter"]

[connection signal="body_enter" from="UnlockExitArea" to="." method="_on_UnlockExitArea_body_enter"]

[connection signal="body_enter" from="RoomEndArea" to="." method="_on_RoomEndArea_body_enter"]


[editable path="UnlockExitArea"]
